Fix footer links overlapping problem

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -189,8 +189,11 @@ input:focus {
     font-size: 12px;
 }
 
-.footer-navigation-top {
-    margin-left: 300px;
+.footer-navigation p {
+    margin-left: 0%;
+    display: inline-block;
+    font-size: 11px;
+    color: rgb(90, 90, 90);
 }
 
 .footer-navigation-top p {
@@ -221,8 +224,9 @@ li:last-child {
 }
 
 .copyright {
-    display: block;
+    display: inline;
     font-size: 10px;
+    margin-left: 0%;
     color: rgb(90, 90, 90);
 }
 
@@ -232,7 +236,7 @@ li:last-child {
 }
 
 .copyright p {
-    margin-left: 300px;
+    margin-left: 100px;
 }
 
 .copyright ul {
